[ci skip] Generated CHANGELOG.md and prepare version for next release